# ghosts.rs

./: Cargo.toml  README.md  tea.yaml
.github/workflows/: CI.yml  future-proof.yml
src/: compile_fail_tests.md  expr.rs  lib.rs  ty.rs
src/proc_macros/: Cargo.toml  mod.rs
src/ty/: fns.rs  mod.rs
