# Templated by `cargo-generate` using https://github.com/danielhenrymantilla/proc-macro-template
[package]
name = "ghost-exprs"
authors = [
    "Daniel Henry-Mantilla <daniel.henry.mantilla@gmail.com>",
]
version = "0.1.0-rc1"  # Keep in sync
edition = "2018"

license = "Zlib OR MIT OR Apache-2.0"
repository = "https://github.com/danielhenrymantilla/ghost-exprs.rs"
documentation = "https://docs.rs/ghost-exprs"
readme = "README.md"

# description = "…"
# keywords = []

[features]
better-docs = []  # allowed to break MSRV
ui-tests = ["better-docs"]

[dependencies]

[dev-dependencies]

[workspace]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
    "--html-before-content", "fix-docsrs-li-details-summary.html",
]
