# Templated by `cargo-generate` using https://github.com/danielhenrymantilla/proc-macro-template
[lib]
proc-macro = true
path = "mod.rs"

[package]
name = "ghosts-proc_macros"
authors = [
    "Daniel Henry-Mantilla <daniel.henry.mantilla@gmail.com>"
]
version = "0.1.0-rc3"  # Keep in sync
edition = "2018"

license = "Zlib OR MIT OR Apache-2.0"
repository = "https://github.com/danielhenrymantilla/ghosts.rs"
documentation = "https://docs.rs/ghosts"

description = "Internal: proc-macro backend of ::ghosts."

[dependencies]
